--- a/org.xidobi.win32.x86/build.properties
+++ b/org.xidobi.win32.x86/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
-output.. = bin/
+output.. = bin/,\
+		   lib/
 bin.includes = META-INF/,\
                .,\
                lib/,\
