Improved properties-file.

--- a/org.xidobi.win32.x86.test/src/org/xidobi/integration/setupIntegrationTests.properties
+++ b/org.xidobi.win32.x86.test/src/org/xidobi/integration/setupIntegrationTests.properties
@@ -1,2 +1,6 @@
-# Specifies one available serial port of the system the running on 
+#########################################################################
+# Please edit this file to setup the integration tests for your system! #
+#########################################################################
+
+# Specifies one available serial port of the system the test is running on:
 availableSerialPort=COM1
