Created a Maven Buildskript for the Java part of Xidobi. * Created all pom.xml-files * configured build.properties for the test-project o.x.win32.x86.test * added Launchconfiguration * changed dependency javax.annotation to non-optional

--- a/org.xidobi.win32.x86.test/build.properties
+++ b/org.xidobi.win32.x86.test/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
+jars.extra.classpath = platform:/plugin/org.xidobi.win32.x86
 bin.includes = META-INF/,\
                .,\
                LICENSE
