Adding Code Analysis with jacoco. Just active the profile "codeCoverage" and Maven will analyse the code.

--- a/org.xidobi.master/pom.xml
+++ b/org.xidobi.master/pom.xml
@@ -36,6 +36,36 @@
 		</repository>
 	</repositories>
 
+	<profiles>
+		<profile>
+			<id>codeCoverage</id>
+			<properties>
+				<!-- Properties to enable jacoco code coverage analysis -->
+				<jacoco.reportPath>../org.xidobi.master/target/jacoco.exec</jacoco.reportPath>
+			</properties>
+			<build>
+				<plugins>
+					<!-- Enabling use of jacoco -->
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.5.3.201107060350</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+									<!-- Where to put jacoco coverage report -->
+									<destFile>${jacoco.reportPath}</destFile>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	<build>
 		<plugins>
 			<!-- Activate Tycho -->
@@ -85,5 +115,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
