--- a/org.xidobi.master/pom.xml
+++ b/org.xidobi.master/pom.xml
@@ -22,6 +22,7 @@
 	</properties>
 
 	<modules>
+		<module>../org.xidobi.native.win32.x86</module>
 		<module>../org.xidobi</module>
 		<module>../org.xidobi.test</module>
 		<module>../org.xidobi.win32.x86</module>
@@ -113,6 +114,7 @@
 					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
