--- a/org.xidobi.rfc2217.test/pom.xml
+++ b/org.xidobi.rfc2217.test/pom.xml
@@ -33,5 +33,5 @@
 	<groupId>org.xidobi</groupId>
 	<artifactId>org.xidobi.rfc2217.test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>eclipse-plugin</packaging>
+	<packaging>eclipse-test-plugin</packaging>
 </project>
