--- a/io.xidobi.win32/.classpath
+++ b/io.xidobi.win32/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -19,5 +20,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/org.xidobi"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jnalib"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/platform"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
