--- a/io.xidobi.win32/pom.xml
+++ b/io.xidobi.win32/pom.xml
@@ -27,5 +27,15 @@
   		<artifactId>jsr305</artifactId>
   		<version>1.3.7</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.11</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hamcrest</groupId>
+  		<artifactId>hamcrest-core</artifactId>
+  		<version>1.3</version>
+  	</dependency>
   </dependencies>
 </project>
